2005-10-14  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Fix documentation comment.
	* Stdlib.cs: Fix export of XprintfFunctions.syslog(); make SetLastError()
	  protected (normal user code shouldn't call it, as it isn't safe); 
	  replace functions which return `void' with functions which return `int'
	  (adding them to MonoPosixHelper.so as well) -- since users can't reliably
	  use SetLastError(), they need the "normal" error detection mechanism;
	  correct the strlen(3) export.
	* Syscall.cs: 
	  - s/PathConf/PathconfName/, s/SysConf/SysconfName/, s/ConfStr/ConfstrName/ 
	    to follow documented enumeration naming conventions.
	  - replace functions which return `void' with functions which return `int'
	    (adding them to MonoPosixHelper.so as well) -- since users can't reliably
	    use SetLastError(), they need the "normal" error detection mechanism;

2005-10-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Stdlib.cs: add strlen() to fix the build.

2005-09-23  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Generate NativeConvert documentation XML fragments for use in
	  monodoc.

2005-09-20  Jonathan Pryor <jonpryor@vt.edu>

	* ChangeLog: Started.
	* CdeclFunction.cs: Copied from ../Mono.Unix; change namespace.
	* HeaderAttribute.cs: Added
	* make-map.cs: Copied from ../Mono.Unix; sort type and member names in
	  output (makes for a more stable svn history, as types/members won't change
	  position anymore within generated code); look for HeaderAttribute not
	  IncludeAttribute for getting headers & #defines; generate NativeConvert
	  partial class.
	* NativeConvert.cs: Copied from ../Mono.Unix; change namespace; turn into a
	  partial class; Remove generated code (generated code is in
	  NativeConvert.generated.cs).
	* NativeConvert.generated.cs: Added
	* Stdlib.cs: Copied from ../Mono.Unix; change namespace; rename Error to
	  Errno (as Error is a "reserved word" in FxCop); [CLSCompliant(false)]
	  support.