@@ -320,6 +320,33 @@ namespace Mono.Unix.Native {
 	// anything from Syscall is non-portable, but restricting yourself to just
 	// Stdlib is intended to be portable.
 	//
+	// The only methods in here should be:
+	//  (1) low-level functions (as defined above).
+	//  (2) "Trivial" function overloads.  For example, if the parameters to a
+	//      function are related (e.g. fwrite(3))
+	//  (3) The return type SHOULD NOT be changed.  If you want to provide a
+	//      convenience function with a nicer return type, place it into one of
+	//      the Mono.Unix.Std* wrapper classes, and give it a .NET-styled name.
+	//      - EXCEPTION: No public functions should have a `void' return type.
+	//        `void' return types should be replaced with `int'.
+	//        Rationality: `void'-return functions typically require a
+	//        complicated call sequence, such as clear errno, then call, then
+	//        check errno to see if any errors occurred.  This sequence can't 
+	//        be done safely in managed code, as errno may change as part of 
+	//        the P/Invoke mechanism.
+	//        Instead, add a MonoPosixHelper export which does:
+	//          errno = 0;
+	//          INVOKE SYSCALL;
+	//          return errno == 0 ? 0 : -1;
+	//        This lets managed code check the return value in the usual manner.
+	//  (4) Exceptions SHOULD NOT be thrown.  EXCEPTIONS: 
+	//      - If you're wrapping *broken* methods which make assumptions about 
+	//        input data, such as that an argument refers to N bytes of data.  
+	//        This is currently limited to cuserid(3) and encrypt(3).
+	//      - If you call functions which themselves generate exceptions.  
+	//        This is the case for using NativeConvert, which will throw an
+	//        exception if an invalid/unsupported value is used.
+	//
 	public class Stdlib
 	{
 		internal const string LIBC = "msvcrt";
